 - Ranged options now changeable with a fill bar; 
 - Only draw battle move circle if have move actions;
 - Comic book cutscenes;
 - Barter;
 - Define multitexture as option (improve critically the outdoor rendering at
 old graphic cards, but disable the terrain texture splatting);
 - Fixed sun/moon position;
 - Continuous Walk with Mouse;
 - Calling read-only skills window at character's window;

Working on:
 - Optimizations for outdoor rendering;
 - Character level up;
 - Weather effects;
 - Shadows;
 - New Models;
 - Put sound effects on editor and maps;
 - Initial approach to NPC select the target to attack;
 - Initial approach to select better attack to NPC use;
 - Initial approach to move NPC on battle;
 - Initial approach to use other actions than attack actions at combat;
 - Load/Save Functions;
 - Receive XP on killing, trickering and completing missions;
 - Use of some itens;

Pending:
 - Minimap Tags;
 - Outdoor MiniMap rewrite;
 - Extend walls to follow map height;
 - Walls with different textures per side;
 - MapEditor: tool to cut walls (knife);
 - Define paths to improve the A* at outdoor maps;
 - New Missions;
 - New Maps;
 - Put Lights on MapEditor;
 - Make a tutorial to the battle system;
 - Implement 5-15% of the feats defined on DNT Book;
 - Score at Death Screen;
 - Capacity of using feats;
 - Capacity of using skills;
 - Finish the combat system implementation;

================================================
|                Version 0.2                   |
================================================
 - Meteors and FireSpheres
 - Indoor Reflections
 - Apply Race and Class Skills Costs (1), not (2), 
   and Skill Level Limits
 - Some adjusts to the A*
 - Smooth Camera Movements
 - Workspace for compiling at M$ Visual C++ 6
 - Use of some weapons
 - First Tutorial game maps
 - Missions
 - Initial stage story put on game
 - More objects
 - More characters
 - More possible actions
 - Script thing to rule the NPC behavior when not 